--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+body {
+  background: #282a36;
+  color: #f8f8f2;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.core {
+  padding-top: 8vh;
+  height: 100vh;
+  max-width: 850px;
+  width: 90%;
+  max-height: 600px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.core h1 {
+  text-align: center;
+  /*font-weight: normal;*/
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button {
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  background-color: #50fa7b;
+  border: none;
+  box-shadow: none;
+  color: #282a36;
+  width: 9rem;
+  white-space: pre-wrap;
+  font-size: 1.25rem;
+  padding: 0.6rem;
+  border-radius: 5px;
+  margin: 1.24rem auto;
+}
+
+button:focus {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
+  background: rgba(80,250,123,.8)
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.genre.row {
+  flex-wrap: nowrap;
+}
+
+.data {
+  border: 1px solid #4c5067;
+  padding: 0.5rem;
+  overflow-wrap: break-word;
+  min-width: 27%;
+}
+
+@media only screen and (max-width: 800px) {
+  .core {
+    padding-top: 6vh;
   }
-  to {
-    transform: rotate(360deg);
+
+  body {
+    font-size: 15px;
   }
 }
+
+
